--- a/O!FMS-V0/packages.config
+++ b/O!FMS-V0/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EasyModbusTCP" version="5.0.0" targetFramework="net45" />
+  <package id="Opc.UaFx.Advanced" version="2.5.2.5" targetFramework="net45" />
+  <package id="Rebex.Common" version="2.5.6874" targetFramework="net45" />
+  <package id="Rebex.Networking" version="3.5.6874" targetFramework="net45" />
   <package id="SSH.NET" version="2013.4.7" targetFramework="net45" />
+  <package id="VisualBasic.PowerPacks.Vs" version="1.0.0" targetFramework="net45" />
 </packages>
