--- a/O!FMS-V0/O!FMS-V0.vbproj
+++ b/O!FMS-V0/O!FMS-V0.vbproj
@@ -106,10 +106,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Communication\DriverStations.vb" />
-    <Compile Include="Game\Arduino_Leds\ArduinoLedController.vb" />
-    <Compile Include="Game\Led\Controller.vb" />
-    <Compile Include="Game\Led\Modes.vb" />
-    <Compile Include="Game\Led\Strip.vb" />
+    <Compile Include="Game\Field Lighting\Lighting.vb" />
     <Compile Include="Game\Timing.vb" />
     <Compile Include="Game\Vault Leds\Vault_Controller.vb" />
     <Compile Include="Game\Vault Leds\Vault_Modes.vb" />
@@ -127,7 +124,6 @@
     <Compile Include="OFMS\Schedule_Generator.vb" />
     <Compile Include="Other\CRC.vb" />
     <Compile Include="Communication\PLC_Comms_Server.vb" />
-    <Compile Include="Game\Led\Colors.vb" />
     <Compile Include="OFMS-MainForm.vb">
       <SubType>Form</SubType>
     </Compile>
