--- a/O!FMS-V0/O!FMS-V0.vbproj
+++ b/O!FMS-V0/O!FMS-V0.vbproj
@@ -150,6 +150,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Schedules\Schedule_Generator.vb" />
+    <Compile Include="ScoringPanel.Designer.vb">
+      <DependentUpon>ScoringPanel.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ScoringPanel.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Startup_Screen.Designer.vb">
       <DependentUpon>Startup_Screen.vb</DependentUpon>
     </Compile>
@@ -191,6 +197,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PLC_Tester.resx">
       <DependentUpon>PLC_Tester.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ScoringPanel.resx">
+      <DependentUpon>ScoringPanel.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Startup_Screen.resx">
       <DependentUpon>Startup_Screen.vb</DependentUpon>
