--- a/O!FMS-V0/packages.config
+++ b/O!FMS-V0/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EasyModbusTCP" version="5.0.0" targetFramework="net45" />
+  <package id="LiteGuard" version="1.1.0" targetFramework="net45" />
   <package id="Opc.UaFx.Advanced" version="2.5.2.5" targetFramework="net45" />
   <package id="Rebex.Common" version="2.5.6874" targetFramework="net45" />
   <package id="Rebex.Networking" version="3.5.6874" targetFramework="net45" />
   <package id="SSH.NET" version="2013.4.7" targetFramework="net45" />
+  <package id="Telnet" version="0.9.0-beta0001" targetFramework="net45" />
 </packages>
