SOmething GIthub Desktop freaking out

--- a/O!FMS-V0/O!FMS-V0.vbproj
+++ b/O!FMS-V0/O!FMS-V0.vbproj
@@ -53,8 +53,12 @@
       <HintPath>..\packages\EasyModbusTCP.5.0.0\lib\EasyModbus.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\VisualBasic.PowerPacks.Vs.1.0.0\lib\Microsoft.VisualBasic.PowerPacks.Vs.dll</HintPath>
+    <Reference Include="LiteGuard, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\LiteGuard.1.1.0\lib\net35\LiteGuard.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.VisualBasic.PowerPacks, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="PrimS.Telnet, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Telnet.0.9.0-beta0001\lib\net45\PrimS.Telnet.dll</HintPath>
     </Reference>
     <Reference Include="Rebex.Common, Version=2.5.6874.0, Culture=neutral, PublicKeyToken=1c4638788972655d, processorArchitecture=MSIL">
       <HintPath>..\packages\Rebex.Common.2.5.6874\lib\net40\Rebex.Common.dll</HintPath>
@@ -70,6 +74,7 @@
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IdentityModel" />
     <Reference Include="System.Management" />
@@ -117,7 +122,10 @@
     <Compile Include="OFMS\Field\AccessPoint.vb" />
     <Compile Include="OFMS\Field\Field.vb" />
     <Compile Include="OFMS\Field\Match.vb" />
+    <Compile Include="OFMS\Field\Switch.vb" />
+    <Compile Include="OFMS\Field\Team.vb" />
     <Compile Include="OFMS\Field\Team_Networks.vb" />
+    <Compile Include="OFMS\Field\ViewMarqUpdater.vb" />
     <Compile Include="Other\CRC.vb" />
     <Compile Include="Communication\PLC_Comms_Server.vb" />
     <Compile Include="OFMS-MainForm.vb">
@@ -154,6 +162,12 @@
       <DependentUpon>Startup_Screen.vb</DependentUpon>
     </Compile>
     <Compile Include="Startup_Screen.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TeamAdder.Designer.vb">
+      <DependentUpon>TeamAdder.vb</DependentUpon>
+    </Compile>
+    <Compile Include="TeamAdder.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Utilities.Designer.vb">
@@ -194,6 +208,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Startup_Screen.resx">
       <DependentUpon>Startup_Screen.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeamAdder.resx">
+      <DependentUpon>TeamAdder.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Utilities.resx">
       <DependentUpon>Utilities.vb</DependentUpon>
@@ -237,6 +254,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="License.txt" />
     <Content Include="ofms logo.ico" />
     <Content Include="OFMS\Field\APTemplate.txt" />
     <Content Include="OFMS\Sounds\fog-blast.wav" />
